Fixed the missing background in app

--- a/frontend/nupjuk-campus-web/src/index.css
+++ b/frontend/nupjuk-campus-web/src/index.css
@@ -3,7 +3,7 @@
   --container-bg: #f9f9f9;
   --text-primary: #213547;
   --text-secondary: #666666;
-  --accent-color: #007AFF; /* Theme color  */
+  --accent-color: #007aff; /* Theme color  */
   --border-color: #eaeaea;
   --text: #6b6375;
   --text-h: #08060d;
@@ -14,8 +14,7 @@
   --accent-bg: rgba(170, 59, 255, 0.1);
   --accent-border: rgba(170, 59, 255, 0.5);
   --social-bg: rgba(244, 243, 236, 0.5);
-  --shadow:
-    rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;
+  --shadow: rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;
 
   --sans: system-ui, 'Segoe UI', Roboto, sans-serif;
   --heading: system-ui, 'Segoe UI', Roboto, sans-serif;
@@ -52,8 +51,7 @@
     --accent-bg: rgba(192, 132, 252, 0.15);
     --accent-border: rgba(192, 132, 252, 0.5);
     --social-bg: rgba(47, 48, 58, 0.5);
-    --shadow:
-      rgba(0, 0, 0, 0.4) 0 10px 15px -3px, rgba(0, 0, 0, 0.25) 0 4px 6px -2px;
+    --shadow: rgba(0, 0, 0, 0.4) 0 10px 15px -3px, rgba(0, 0, 0, 0.25) 0 4px 6px -2px;
   }
 
   #social .button-icon {
@@ -69,12 +67,14 @@ body {
 
   /* background-color: var(--bg-color); */
   color: var(--text-primary);
-  transition: background-color 0.3s, color 0.3s;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
 /* Background image layer */
 body::before {
-  content: "";
+  content: '';
 
   position: fixed;
   inset: 0;
@@ -150,8 +150,4 @@ code {
   flex: 1;
   padding: 2rem 3rem;
   overflow-y: auto;
-
-  background-image: url('./assets/maxresdefault.jpg');
-  background-size: cover;
-  background-position: center;
 }
